--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <jsframework.version>1.13.3-SNAPSHOT</jsframework.version>
+        <jsframework.version>1.14.0</jsframework.version>
         <jstd.plugin.version>1.3.2.5</jstd.plugin.version>
 
         <closure.library.version>r2180</closure.library.version>
