--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,8 @@
         <jstd.plugin.version>1.3.2.5</jstd.plugin.version>
 
         <closure.library.version>r2180</closure.library.version>
+        <!-- Set in profile -->
+        <!--<closure.compiler.level>WHITESPACE_ONLY</closure.compiler.level>-->
 
     </properties>
 
@@ -135,7 +137,8 @@
                 <configuration>
                     <!--<compileLevel>ADVANCED_OPTIMIZATIONS</compileLevel>-->
                     <!--<compileLevel>SIMPLE_OPTIMIZATIONS</compileLevel>-->
-                    <compileLevel>WHITESPACE_ONLY</compileLevel>
+                    <!--<compileLevel>WHITESPACE_ONLY</compileLevel>-->
+                    <compileLevel>${closure.compiler.level}</compileLevel>
                 </configuration>
                 <dependencies>
                     <dependency>
@@ -189,5 +192,23 @@
         </plugins>
 
     </build>
+
+    <profiles>
+        <profile>
+            <id>default</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <closure.compiler.level>WHITESPACE_ONLY</closure.compiler.level>
+            </properties>
+        </profile>
+        <profile>
+            <id>advanced</id>
+            <properties>
+                <closure.compiler.level>ADVANCED_OPTIMIZATIONS</closure.compiler.level>
+            </properties>
+        </profile>
+    </profiles>
 
 </project>
