--- a/jsTestDriver.conf
+++ b/jsTestDriver.conf
@@ -78,6 +78,7 @@ load:
  - closure-library-r2180/closure/goog/structs/prioritypool.js
  - closure-library-r2180/closure/goog/net/xhriopool.js
  - closure-library-r2180/closure/goog/net/xhrmanager.js
+ - src/main/javascript_source/org/jboss/search/page/SearchPageElements.js
  - closure-library-r2180/closure/goog/events/inputhandler.js
  - closure-library-r2180/closure/goog/async/delay.js
  - closure-library-r2180/closure/goog/events/keyhandler.js
