first trivial implementation of search results template

--- a/jsTestDriver.conf
+++ b/jsTestDriver.conf
@@ -59,6 +59,7 @@ load:
  - src/main/javascript_source/org/jboss/search/Constants.js
  - closure-library-r2180/closure/goog/uri/utils.js
  - closure-library-r2180/closure/goog/uri/uri.js
+ - src/main/javascript_source/generated_templates/search_results.soy.js
  - closure-library-r2180/closure/goog/events/eventhandler.js
  - closure-library-r2180/closure/goog/events/eventtarget.js
  - closure-library-r2180/closure/goog/timer/timer.js
@@ -79,9 +80,9 @@ load:
  - closure-library-r2180/closure/goog/net/xhriopool.js
  - closure-library-r2180/closure/goog/net/xhrmanager.js
  - src/main/javascript_source/org/jboss/search/page/SearchPageElements.js
+ - closure-library-r2180/closure/goog/events/keyhandler.js
  - closure-library-r2180/closure/goog/events/inputhandler.js
  - closure-library-r2180/closure/goog/async/delay.js
- - closure-library-r2180/closure/goog/events/keyhandler.js
  - src/main/javascript_source/org/jboss/search/SearchFieldHandler.js
  - src/main/javascript_source/org/jboss/search/page/SearchPage.js
  - src/main/javascript_source/org/jboss/search/suggestions/event/SearchStart.js
