update test dependencies

--- a/jsTestDriver.conf
+++ b/jsTestDriver.conf
@@ -81,6 +81,7 @@ load:
  - closure-library-r2180/closure/goog/net/xhrmanager.js
  - src/main/javascript_source/org/jboss/search/page/SearchPageElements.js
  - closure-library-r2180/closure/goog/events/keyhandler.js
+ - src/main/javascript_source/org/jboss/search/response/normalize.js
  - closure-library-r2180/closure/goog/events/inputhandler.js
  - closure-library-r2180/closure/goog/async/delay.js
  - src/main/javascript_source/org/jboss/search/SearchFieldHandler.js
