add Gravatar URL functionality

--- a/jsTestDriver.conf
+++ b/jsTestDriver.conf
@@ -81,6 +81,10 @@ load:
  - closure-library-r2180/closure/goog/net/xhrmanager.js
  - src/main/javascript_source/org/jboss/search/page/SearchPageElements.js
  - closure-library-r2180/closure/goog/events/keyhandler.js
+ - closure-library-r2180/closure/goog/crypt/crypt.js
+ - closure-library-r2180/closure/goog/crypt/hash.js
+ - closure-library-r2180/closure/goog/crypt/md5.js
+ - closure-library-r2180/closure/goog/format/emailaddress.js
  - src/main/javascript_source/org/jboss/search/response/normalize.js
  - closure-library-r2180/closure/goog/events/inputhandler.js
  - closure-library-r2180/closure/goog/async/delay.js
