fix missing dependency

--- a/jsTestDriver.conf
+++ b/jsTestDriver.conf
@@ -85,6 +85,7 @@ load:
  - closure-library-r2180/closure/goog/crypt/hash.js
  - closure-library-r2180/closure/goog/crypt/md5.js
  - closure-library-r2180/closure/goog/format/emailaddress.js
+ - closure-library-r2180/closure/goog/memoize/memoize.js
  - src/main/javascript_source/org/jboss/search/response/normalize.js
  - closure-library-r2180/closure/goog/events/inputhandler.js
  - closure-library-r2180/closure/goog/async/delay.js
