update jsTestDriver test deps

--- a/jsTestDriver.conf
+++ b/jsTestDriver.conf
@@ -82,6 +82,10 @@ load:
  - src/main/javascript_source/org/jboss/search/page/SearchPageElements.js
  - closure-library-r2180/closure/goog/events/keyhandler.js
  - closure-library-r2180/closure/goog/crypt/crypt.js
+ - closure-library-r2180/closure/goog/i18n/datetimesymbols.js
+ - closure-library-r2180/closure/goog/date/datelike.js
+ - closure-library-r2180/closure/goog/date/date.js
+ - closure-library-r2180/closure/goog/date/utcdatetime.js
  - closure-library-r2180/closure/goog/crypt/hash.js
  - closure-library-r2180/closure/goog/crypt/md5.js
  - closure-library-r2180/closure/goog/format/emailaddress.js
