Refactor XHR query execution code. Closes #39.

--- a/jsTestDriver.conf
+++ b/jsTestDriver.conf
@@ -16,6 +16,7 @@ load:
  - closure-library-r2388/closure/goog/uri/uri.js
  - src/main/javascript_source/org/jboss/search/Constants.js
  - src/main/javascript_source/org/jboss/search/util/urlGenerator.js
+ - src/main/javascript_source/org/jboss/search/service/QueryService.js
  - closure-library-r2388/closure/goog/debug/errorhandlerweakdep.js
  - closure-library-r2388/closure/goog/events/listenable.js
  - closure-library-r2388/closure/goog/events/listener.js
@@ -41,6 +42,9 @@ load:
  - closure-library-r2388/closure/goog/events/eventtarget.js
  - closure-library-r2388/closure/goog/net/imageloader.js
  - src/main/javascript_source/org/jboss/search/util/ImageLoader.js
+ - src/main/javascript_source/org/jboss/search/service/QueryServiceEventType.js
+ - src/main/javascript_source/org/jboss/search/service/QueryServiceEvent.js
+ - src/main/javascript_source/org/jboss/search/service/QueryServiceDispatcher.js
  - closure-library-r2388/closure/goog/history/eventtype.js
  - closure-library-r2388/closure/goog/timer/timer.js
  - closure-library-r2388/closure/goog/history/event.js
