Main search page now registers listener on the date filter. See #36

--- a/jsTestDriver.conf
+++ b/jsTestDriver.conf
@@ -104,6 +104,7 @@ load:
  - closure-library-r2388/closure/goog/style/style.js
  - closure-library-r2388/closure/goog/testing/events/events.js
  - src/main/javascript_source/org/jboss/search/suggestions/query/view/View.js
+ - src/main/javascript_source/org/jboss/search/visualization/HistogramEventType.js
  - src/main/javascript_source/generated_templates/search_results.soy.js
  - src/main/javascript_source/org/jboss/search/page/event/QuerySubmitted.js
  - src/main/javascript_source/org/jboss/search/page/SearchPageElements.js
