add .DS_Store into .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 # ------------------------------------------------------
+# Ignore Mac files
+
+.DS_Store
+
+# ------------------------------------------------------
 # Ignore IntelliJ IDEA files
 
 .idea/
