--- a/jsTestDriver.conf
+++ b/jsTestDriver.conf
@@ -14,6 +14,7 @@ load:
  - closure-library-r2388/closure/goog/structs/structs.js
  - closure-library-r2388/closure/goog/structs/map.js
  - closure-library-r2388/closure/goog/uri/uri.js
+ - src/main/javascript_source/org/jboss/search/Variables.js
  - src/main/javascript_source/org/jboss/search/Constants.js
  - closure-library-r2388/closure/goog/i18n/datetimesymbols.js
  - closure-library-r2388/closure/goog/date/datelike.js
