--- a/core/pom.xml
+++ b/core/pom.xml
@@ -1,16 +1,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-        <modelVersion>4.0.0</modelVersion>
-        <parent>
-                <groupId>org.jboss.search</groupId>
-                <artifactId>web-ui</artifactId>
-                <version>1.0-SNAPSHOT</version>
-        </parent>
-        <artifactId>core</artifactId>
-        <packaging>jsar</packaging>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-        <build>
-                <plugins>
+    <groupId>org.jboss.search.web-ui</groupId>
+    <artifactId>core</artifactId>
+    <packaging>jsar</packaging>
+
+    <parent>
+        <groupId>org.jboss.search</groupId>
+        <artifactId>web-ui</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
+    <build>
+        <plugins>
             <plugin>
                 <groupId>com.github.jlgrock.javascript-framework</groupId>
                 <artifactId>jsar-maven-plugin</artifactId>
@@ -28,6 +31,9 @@
                 <groupId>com.github.jlgrock.javascript-framework</groupId>
                 <artifactId>closure-compiler-maven-plugin</artifactId>
                 <version>${jsframework.version}</version>
+                <configuration>
+                    <compileLevel>${closure.compiler.level}</compileLevel>
+                </configuration>
             </plugin>
 
             <plugin>
@@ -45,7 +51,7 @@
                 <version>${jsframework.version}</version>
             </plugin>
 
-<!--
+            <!--
             <plugin>
                 <groupId>com.github.jlgrock.javascript-framework</groupId>
                 <artifactId>jsdocs-maven-plugin</artifactId>
@@ -58,7 +64,7 @@
                     </execution>
                 </executions>
             </plugin>
--->
+            -->
 
             <plugin>
                 <groupId>com.github.jlgrock.javascript-framework</groupId>
@@ -72,6 +78,7 @@
                     </execution>
                 </executions>
             </plugin>
-                </plugins>
-        </build>
+        </plugins>
+    </build>
+
 </project>
