QueryService (interface), QueryServiceDispatcher and QueryServiceEvent moved from search module to core module. Only implementations of QueryService interface are kept in search module.

--- a/searchPage/jsTestDriver.conf
+++ b/searchPage/jsTestDriver.conf
@@ -15,6 +15,7 @@ load:
  - ../closure-library-99cd91/closure/goog/i18n/timezone.js
  - ../closure-library-99cd91/closure/goog/date/date.js
  - ../closure-library-99cd91/closure/goog/i18n/datetimeformat.js
+ - ../closure-library-99cd91/closure/goog/i18n/datetimeparse.js
  - ../closure-library-99cd91/closure/goog/history/eventtype.js
  - ../closure-library-99cd91/closure/goog/disposable/idisposable.js
  - ../closure-library-99cd91/closure/goog/disposable/disposable.js
